--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 <body>
   
   <div id="conteiner" class="conteiner">
-    <img  class="img_happy"  src="../photo/happy.jpg" alt="happy" >
+    <img  class="img_happy"  src="photo/happy.jpg" alt="happy" >
   </div>
  
   
-  <button onclick="global_anim()" class="button_pris" id="button_pris"><img  src="../photo/prise.jpg" alt="photo"></button>
+  <button onclick="global_anim()" class="button_pris" id="button_pris"><img  src="photo/prise.jpg" alt="photo"></button>
 
 
 </body>
